import 'package:flutter_mysivi_chat_app/models/user_model.dart';
import 'package:flutter_mysivi_chat_app/services/chat_history_services.dart';

abstract class UserServices {
  Future<void> addUser(String name);
  Future<List<UserModel>> getAllUsers();
}

class UsersServicesImpl implements UserServices {
  UsersServicesImpl._() {
    ChatHistoryServicesImpl.instance.ensureUsers(_users);
  }

  static final UsersServicesImpl instance = UsersServicesImpl._();
  final List<UserModel> _users = [
    UserModel(
      id: '1',
      name: 'Alice',
      isOnline: true,
      lastActive: DateTime.now().subtract(Duration(seconds: 30)),
    ),
    UserModel(
      id: '2',
      name: 'Bob',
      isOnline: false,
      lastActive: DateTime.now().subtract(Duration(hours: 2)),
    ),
  ];

  @override
  Future<void> addUser(String name) async {
    final newUser = UserModel(
      id: DateTime.now().millisecondsSinceEpoch.toString(),
      name: name,
      isOnline: _users.length % 2 == 0,
      lastActive: _users.length % 2 == 0
          ? DateTime.now()
          : DateTime.now().subtract(Duration(hours: 1)),
    );
    _users.add(newUser);
    ChatHistoryServicesImpl.instance.addHistoryForUser(newUser);
  }

  @override
  Future<List<UserModel>> getAllUsers() async {
    return _users;
  }
}
