...
                  labelColor: Colors.black,
                  unselectedLabelColor: Colors.grey.shade600,
                  labelStyle: const TextStyle(fontWeight: FontWeight.w600),

                  tabs: const [
                    Tab(text: 'Users'),
                    Tab(text: 'Chat History'),
                  ],
                ),
              ),
            ),
          ),
        ),
...
